[package]
name = "adult-dl"
version = "0.1.0"
authors = ["ksk001100 <hm.pudding0715@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# async-std = { version = "1.6", features = ["attributes"] }
# http-client = "3.0.0"
# surf = "1.0.3"
regex = "1"
async-trait = "0.1.37"
# parallel-stream = "2.1.1"

reqwest = { version = "0.10", features = ["blocking", "stream"] }
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.5"
