[package]
name = "adult-dl"
version = "0.1.0"
authors = ["ksk001100 <hm.pudding0715@gmail.com>"]
edition = "2018"
description = "Fast adult video downloader"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
async-trait = "0.1.37"
reqwest = { version = "0.10", features = ["blocking", "stream"] }
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.5"
num_cpus = "1.0"
seahorse = "1.0"
