[package]
name = "adult-dl"
version = "0.0.2"
authors = ["ksk001100 <hm.pudding0715@gmail.com>"]
edition = "2018"
description = "Fast adult video downloader"
repository = "https://github.com/ksk001100/adult-dl"
keywords = ["downloader", "parallel"]
license-file = "LICENSE"
readme = "README.md"


[dependencies]
regex = "1"
async-trait = "0.1.37"
reqwest = { version = "0.10", features = ["blocking", "stream"] }
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.5"
num_cpus = "1.0"
seahorse = "1.1"
bytesize = "1.0.1"
